--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://blog.ideseg.com
 title: code segment (3.0)
-subtitle: read careful
+subtitle: read carefully
 author: Carlos Segura
 simple_search: http://google.com/search
 description:
@@ -58,14 +58,14 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user: csegura
+github_user: 
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
 twitter_user: romheat
-twitter_tweet_count: 4
+twitter_tweet_count: 2
 twitter_show_replies: false
 twitter_follow_button: true
 twitter_show_follower_count: false
