--- a/_config.yml
+++ b/_config.yml
@@ -91,10 +91,10 @@ delicious_count: 3
 
 # Disqus Comments
 disqus_short_name: codesegment
-disqus_show_comment_count: false
+disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-28591959-1
 
 # Facebook Like
 facebook_like: false
